# zensensei-backend

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  railway-env-vars.md  railway.json  railway.toml  requirements-dev.txt  requirements.txt
.github/workflows/: assemble-index.yml  ci.yml  security.yml
data/: auth.json  sample_analytics.json  sample_events.json  sample_goals.json  sample_insights.json  sample_integrations.json  sample_notifications.json  sample_tasks.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  RAILWAY_DEPLOYMENT.md
frontend/: Dockerfile  nginx.conf
frontend/public/: _index_part1.html  html_chunk_aa  html_chunk_ab  html_chunk_ac  html_chunk_ad  index.html  integrations.html
gateway/: Dockerfile  __init__.py  health.py  main.py  proxy.py  routes.py
railway-configs/: README.md  ai-reasoning-service.toml  analytics-service.toml  frontend.toml  gateway.toml  graph-query-service.toml  integration-service.toml  notification-service.toml  user-service.toml
scripts/: deploy-railway.sh  health_check.py  migrate_neo4j.py  seed_data.py
services/ai_reasoning_service/: Dockerfile  __init__.py  main.py  schemas.py
services/analytics_service/: Dockerfile  __init__.py  main.py  schemas.py
services/graph_query_service/: Dockerfile  __init__.py  cypher_queries.py  main.py  schemas.py
services/integration_service/: Dockerfile  __init__.py  main.py  (+1 more)
shared/: __init__.py  auth.py  config.py
terraform/: main.tf  outputs.tf  variables.tf
(+110 files in other folders)
