[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zensensei-backend"
version = "1.0.0"
description = "ZenSensei - AI-Powered Life Management Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "neo4j>=5.14.0",
    "redis>=5.0.0",
    "google-cloud-firestore>=2.13.0",
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-storage>=2.13.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-aiplatform>=1.36.0",
    "firebase-admin>=6.2.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "structlog>=23.2.0",
    "orjson>=3.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing"
